Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-136967

qjniarray.h:775:46: error: a template argument list is expected

    XMLWordPrintable

Details

    • Android, Linux/Other display system
    • ea8f19f50 (dev), 856dcf7f7 (6.10)
    • 2025wk20s1QtforAndroid, 2025wk22s1-2QtforAndroid

    Description

      Error

      Run into compilation error when building Android developer build on dev for all the module

      /home/username/dev/envs/qt610_16052025/qt6/qtbase/src/corelib/kernel/qjniarray.h:775:46: error: a template argument list is expected after a name prefixed by the template keyword [-Wmissing-template-arg-list-after-template-kw]
        775 |             jobject element = frame.template convertToJni(val);

      Used env

      • Qt dev got on 16th of May 2025
      • Target architecture: x86_64
      • Host: Linux Ubuntu 24.04
      • NDK: NDK29 Beta-1 from QTBUG-132640 

      Plausible reason

      • Calling template without template argument list{}

      Fix proposal

      • Add argument list{}{}

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-136967
          # Subject Branch Project Status CR V

          Activity

            People

              rampe Rami Potinkara
              rampe Rami Potinkara
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes