Android: don't disambiguate the convertToJni call with 'template'

There is no non-template overload of LocalFrame::convertToJni, and
clang 18 complains about an explicit .template without a template
argument list. We call convertToJni without either in other places, so
do so here as well.

Fixes: QTBUG-136967
Change-Id: I2b4bbc8a4e2056bd2a8bff390ea0847f2e18202e
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit ea8f19f50bc6de845fb5ce7675b3b30dbc5c4344)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>